2004-03-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/convert-ly.py (FatalConversionError.conv): add #'() case
	to 1.9.0 conversion.
	

	* lily/mark-engraver.cc: doc string.

	* make/lilypond.redhat.spec.in (Group): add vim scriptlets.

	* Documentation/user/introduction.itely (Introduction): new node.

2004-03-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/duration.cc (LY_DEFINE): dotcount argument is now optional.

	* input/regression/spacing-ragged-last.ly: new file.

	* lily/gourlay-breaking.cc (do_solve): add raggedlast support for
	spacing.

	* scm/font.scm: rewrite using GOOPS.
	
	* lily/context-def.cc (filter_engravers): derefence pointer.

	* lily/lily-guile.cc (type_check_assignment): use
	ly_scheme_function iso. scm_primitive_eval where possible.

	* lily/performance.cc (output): limit channels at 15. This fixes
	percussion inadvertently showing up in large scores.

2004-03-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/tuplet-gap.ly: new file.

	* lily/tuplet-bracket.cc (make_bracket): take gap interval.
	(print): compute gap length from number size, include italic
	correction.

	* scm/define-grobs.scm (all-grob-descriptions): remove gap from
	tuplet-bracket

	* scm/paper.scm (set-default-paper-size): new function, to be
	called at toplevel.
	(set-paper-size): new function, to be called inside \paper {}
	(set-default-paper-size): new function, to be called at toplevel.

	* lily/paper-def.cc (LY_DEFINE): ly:paper-def?: new function. 

	* lily/beam-performer.cc (process_music): idem.

	* lily/slur-performer.cc (process_music): stop melisma for stop event.
	
	* tex/titledefs.tex: remove scshape for piece.

	* lily/line-spanner.cc (line_stencil): font-encoding = music, not
	font-family

	* lily/time-signature.cc (special_time_signature): font-encoding
	not family.

	* lily/dynamic-engraver.cc (acknowledge_grob): fix typo, attach
	dynamic to head. This fixes p placement in morgenlied.

2004-03-23  Werner Lemberg  <wl@gnu.org>
