@@ -1,8 +1,11 @@
 2004-03-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/staff-performer.cc (create_audio_elements): play instrument
+	changes before notes arrive. This fixes instrument of the first
+	note in a score.
+
 	* scripts/convert-ly.py (FatalConversionError.conv): add #'() case
 	to 1.9.0 conversion.
-	
 
 	* lily/mark-engraver.cc: doc string.
 
